# PureVox

./: .gitignore  LICENSE  README.md
scripts/: build-frontend.bat  dev-frontend.bat  generate-all-icons.ps1  generate-ico.ps1  generate-icon.ps1  release.bat  release.ps1
src-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src-frontend/src/: App.vue  main.ts
src-frontend/src/api/: bilibili.ts  rank.ts
src-frontend/src/components/layout/: PlayerBar.vue  SidebarNav.vue  TopBar.vue
src-frontend/src/components/player/: AddToPlaylistModal.vue  ProgressBar.vue  TrackItem.vue
src-frontend/src/components/ui/: ContextMenu.vue  CoverImage.vue  GlassCard.vue  GlassSelect.vue  IconButton.vue
src-frontend/src/components/video/: VideoCard.vue  VideoPlayerModal.vue
src-frontend/src/data/: mock.ts
src-frontend/src/router/: index.ts
src-frontend/src/stores/: contextMenu.ts  favorites.ts  history.ts  player.ts  playlists.ts  recommend.ts  settings.ts  storage.ts  theme.ts
src-frontend/src/styles/: main.css
src-frontend/src/views/: AlbumDetailView.vue  ArtistDetailView.vue  FavoritesView.vue  HistoryView.vue  HomeView.vue  NowPlayingView.vue  PlaylistDetailView.vue  PlaylistsView.vue  SearchView.vue  SettingsView.vue
src-tauri/: Cargo.toml  search_result.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bili.rs  lib.rs  llm.rs  main.rs  rank.rs  storage.rs
